--- a/gomyck.conf
+++ b/gomyck.conf
@@ -6,7 +6,7 @@ Port=3306
 User=chenxinglong
 Password=Cxl.123456
 CKStr=tcp://127.0.0.1:9000?debug=false
-DTKey=sysbench.test///INSERT INTO default.cktest(sqlType,binlogTime,parseTime,id,k,c,pad) VALUES (?,?,?,?,?,?,?)
-DTKey=sysbench.test-ColType///0,0,0,1,1,0,0
-DTKey=sysbench.test_manul///INSERT INTO default.cktest(sqlType,binlogTime,parseTime,id,k,c,pad) VALUES (?,?,?,?,?,?,?)
-DTKey=sysbench.test_manul-ColType///0,0,0,1,1,0,0
+DTKey=sysbench.test///INSERT INTO default.cktest(sqlType,binlogTime,parseTime,serverId,id,k,c,pad) VALUES (?,?,?,?,?,?,?,?)
+DTKey=sysbench.test-ColType///0,0,0,0,1,1,0,0
+DTKey=sysbench.test_manul///INSERT INTO default.cktest(sqlType,binlogTime,parseTime,serverId,id,k,c,pad) VALUES (?,?,?,?,?,?,?,?)
+DTKey=sysbench.test_manul-ColType///0,0,0,0,1,1,0,0
